<resources>
    <string name="app_name">Aseguradora Tajy</string>
    <string name="app_subtitle">Propiedad Cooperativa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_route">Cómo llegar?</string>
    <string name="action_call">Llamar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="label_message_welcome">Bienvenido a Tajy Móvil</string>
    <string name="error_parsing_json">Error al convertir respuesta</string>
    <string name="error_invalid_response">Error, respuesta invalída</string>
    <string name="tag_not_internet">La aplicación necesita internet, favor actívela</string>
    <string name="policy_details">Ver Detalles</string>
    <string name="tajy_details">Aseguradora Tajy - Propiedad Cooperativa S.A</string>


    <string name="prompt_document">Documento</string>
    <string name="prompt_password">Clave</string>
    <string name="prompt_login">Ingresar</string>
    <string name="prompt_forget_password">Recuperar Clave</string>
    <string name="prompt_register">Registrarme</string>
    <string name="prompt_process_title">Procesando</string>
    <string name="prompt_process_message">Por favor espere un momento...</string>
    <string name="prompt_close">Cerrar</string>
    <string name="label_accept">Aceptar</string>
    <string name="prompt_branch">Sucursal</string>
    <string name="prompt_phone">Teléfono</string>
    <string name="prompt_address">Dirección</string>
    <string name="tag_user">Usuario: </string>
    <string name="prompt_mark">Marca</string>
    <string name="prompt_model">Modelo</string>
    <string name="prompt_insurance_amount">Suma Asegurada</string>
    <string name="prompt_vencimiento">Vencimiento</string>
    <string name="error_get_object_position">Error al obtener objeto</string>
    <string name="policy_details_is_empty">Polizas sin detalles para mostrar</string>

    <!-- Policy item-->
    <string name="tag_policies">Polizas</string>
    <string name="tag_account">Detalle de Cuenta</string>
    <string name="tag_policy_type">Tipo: </string>
    <string name="tag_policy_amount">Monto: </string>
    <string name="tag_policy_code">Número de póliza: </string>
    <string name="tag_fee">Cuota: </string>
    <string name="tag_date_from">Desde: </string>
    <string name="tag_date_to">Hasta: </string>
    <string name="tag_expire_date">Vencimiento: </string>
    <string name="tag_emition_date">Emisión: </string>
    <string name="tag_balance">Saldo: </string>
    <string name="tag_last_payment">Último pago: </string>
    <string name="tag_options">Opciones</string>
    <string name="tagl_account_data">Datos de la cuenta</string>
    <string name="label_selected_options">Selecciona una opción</string>
    <array name="policy_options">
        <item>Detalle de polizas</item>
        <item>Detalle de Cuentas</item>
    </array>
    <string name="label_account_details">Detalles de Cuenta</string>

    <string name="error_empty_field">Debes completar el campo.</string>
    <string name="error_login">Usuario o clave incorrectos.</string>
    <string name="title_activity_branch_activities">BranchActivities</string>
    <string name="title_activity_insurance">InsuranceActivity</string>
    <string name="error_empty_insurance_policy">No posees polizas para mostrar</string>


    <!-- Navigation Drawer Strings-->
    <string name="label_nave_session_title">Sesión</string>
    <string name="label_out_session">Cerrar Sesión</string>
    <string name="label_nav_my_account">Mi Cuenta</string>
    <string name="label_nav_web_page">Visítanos</string>

    <!--Default strings-->
    <string name="label_principal_menu">Mis polizas</string>
    <string name="content_description">descripción</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="tag_accept">Aceptar</string>
    <string name="tag_cancel">Cancelar</string>
    <string name="tag_delete">Eliminar</string>
    <string name="tag_back">Atrás</string>
    <string name="success_message">Operación realizada exitosamente</string>
    <string name="label_send">Enviar</string>


    <!-- tabs navigation-->
    <string name="tab_products">Productos</string>
    <string name="tab_services">Servicios</string>
    <string name="tab_account">Mi Cuenta</string>
    <string name="tab_contact_mail">Contáctenos</string>
    <string name="tab_branches">Sucursales</string>
    <string name="title_activity_managment_data">ManagmentDataActivity</string>

    <!-- Contact Support Fragment strings-->
    <string name="label_name_last_name">Nombre y Apellido</string>
    <string name="label_last_name">Apellido</string>
    <string name="label_contact_support">Contáctenos</string>
    <string name="message_suport">
Atención las 24 horas
Call Center: +595 21 689 1000
Línea Gratuita: 0800 11 85 85
*tajy (8259) desde cualquier
compañía telefónica</string>
    <string name="complete_form_message">Completa el formulario</string>
    <string name="label_tajy">Aseguradora Tajy</string>
    <string name="label_phone">Teléfono</string>
    <string name="label_mail">Correo Electrónico</string>
    <string name="label_issues">Asunto</string>
    <string name="label_message">Mensaje</string>
    <string name="label_sinister">Siniestro</string>
    <string name="dialog_confirmation_title">Confirmación</string>
    <string name="dialog_confirmation_message">¿Desea enviar los datos ingresados?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_contact_title">Contácto</string>
    <string name="label_quotien_title">Cotizador</string>


    <!-- Quotient fragment-->
    <string name="label_quotiten_vehicle">Cotizador</string>
    <string name="label_quotient_mesage">Cotiza tu vehículo con nosotros</string>
    <string name="label_year">Año</string>

    <!--Volley Network Error -->
    <string name="volley_no_connection_error">No posee conexión a internet, favor verifiquela.</string>
    <string name="volley_network_error">Intento de conexión con el servidor fallida, favor intente de nuevo.</string>
    <string name="volley_server_error">Error de servidor, favor intente de nuevo.</string>
    <string name="volley_authentication_error">Error de Autenticación.</string>
    <string name="volley_auth_error">Error al autenticarse en el servidor.</string>
    <string name="volley_parse_error">Error al capturar la respuesta.</string>
    <string name="error_invalid_credentials">Credenciales incorrectas.</string>
    <string name="error_expired_session">Sesión Expirada</string>
    <string name="dialog_error_unexpected">Error inesperado</string>
    <string name="volley_time_out_error">Tiempo de espera de conexión agotado.</string>
    <string name="volley_default_error">Error inesperado, favor intente de vuelta.</string>

    <!-- Account strings-->
    <string name="tag_details_account">Detalle de Cuenta</string>
    <string name="tag_account_ci">Cédula: </string>
    <string name="tag_ruc">Ruc: </string>
    <string name="tag_particular_address">Dir. Particular: </string>
    <string name="tag_commercial_phone">Tel. Comercial: </string>
</resources>
