<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_account"
        android:checked="false"
        android:icon="@mipmap/ic_account_circle_black_36dp"
        android:title="@string/tab_account"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_product"
        android:checked="true"
        android:icon="@mipmap/ic_home_black_36dp"
        android:title="@string/tab_products"
        app:showAsAction="ifRoom" />

    <!--
    <item
        android:id="@+id/action_services"
        android:checked="false"
        android:icon="@mipmap/ic_chrome_reader_mode_black_36dp"
        android:title="@string/tab_services"
        app:showAsAction="ifRoom" />

-->
    <item
        android:id="@+id/action_branches"
        android:checked="false"
        android:icon="@mipmap/ic_place_black_36dp"
        android:title="@string/tab_branches"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_contact"
        android:checked="false"
        android:icon="@mipmap/ic_email_black_36dp"
        android:title="@string/tab_contact_mail"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_report_sinister"
        android:checked="false"
        android:icon="@mipmap/ic_whatshot_black_36dp"
        android:title="@string/tab_report_sinister"
        app:showAsAction="ifRoom" />

</menu>