<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_imageview_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/content_description"
                app:srcCompat="@mipmap/ic_tajy_banner" />

            <EditText
                android:id="@+id/login_input_document"
                android:layout_width="match_parent"
                android:layout_height="@dimen/desc_padding"
                android:layout_margin="@dimen/default_padding"
                android:background="@drawable/edit_text_drawable_icon_bg"
                android:drawableLeft="@mipmap/ic_person_white_24dp"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:drawableStart="@mipmap/ic_person_white_24dp"
                android:ems="10"
                android:hint="@string/prompt_document"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1" />

            <EditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/desc_padding"
                android:layout_margin="@dimen/default_padding"
                android:background="@drawable/edit_text_drawable_icon_bg"
                android:drawableLeft="@mipmap/ic_lock_white_24dp"
                android:drawablePadding="@dimen/edit_text_drawable_padding"
                android:drawableStart="@mipmap/ic_lock_white_24dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@mipmap/ic_navigate_next_white_24dp"
                android:drawableRight="@mipmap/ic_navigate_next_white_24dp"
                android:text="@string/prompt_login"
                android:theme="@style/MyCustomRaisedButton" />

            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/button_bar_border"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button_reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_forget_password"
                    android:textSize="13sp"
                    android:theme="@style/MyCustomFlatButton" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="@color/colorAccent" />

                <Button
                    android:id="@+id/login_button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_register"
                    android:textSize="13sp"
                    android:theme="@style/MyCustomFlatButton" />
            </android.support.v7.widget.ButtonBarLayout>


        </LinearLayout>

    </ScrollView>


</LinearLayout>