<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="@dimen/desc_padding"
            android:layout_height="@dimen/desc_padding"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/default_padding"
            android:layout_marginStart="@dimen/default_padding"
            android:src="@mipmap/tajy_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/tag_details_account"
            android:textColor="@color/icons"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/tag_account_ci"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ci_account_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/tag_ruc"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ruc_account_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/tag_particular_address"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/particular_address_value"
                android:layout_width="match_parent"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:text="@string/content_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/tag_commercial_phone"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/commercial_phone_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/content_description" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
