<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginLeft="@dimen/default_padding"
                android:layout_marginRight="@dimen/default_padding"
                android:layout_marginStart="@dimen/default_padding"
                android:contentDescription="@string/content_description"
                android:src="@mipmap/ic_fee_description"/>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/default_padding"
                android:layout_marginTop="@dimen/default_padding"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/policy_fee_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_padding"
                        android:layout_marginRight="@dimen/default_padding"
                        android:text="@string/tag_fee"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/policy_fee_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/content_description"
                        android:textStyle="italic" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/policy_amount_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_padding"
                        android:layout_marginRight="@dimen/default_padding"
                        android:text="@string/tag_policy_amount"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/policy_amount_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/content_description"
                        android:textStyle="italic" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/emition_date_policy_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_padding"
                        android:layout_marginRight="@dimen/default_padding"
                        android:text="@string/tag_emition_date"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/emition_date_policy_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_description"
                        android:textStyle="italic" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/expire_date_policy_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_padding"
                        android:layout_marginRight="@dimen/default_padding"
                        android:text="@string/tag_expire_date"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/expire_date_policy_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_description"
                        android:textStyle="italic" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/last_payment_policy_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_padding"
                        android:layout_marginRight="@dimen/default_padding"
                        android:text="@string/tag_last_payment"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/last_payment_policy_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_description"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/balance__policy_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/default_padding"
                        android:layout_marginRight="@dimen/default_padding"
                        android:text="@string/tag_balance"
                        android:textColor="@color/primary_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/balance_policy_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/content_description"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
</android.support.design.widget.CoordinatorLayout>