<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true">

    <android.support.v7.widget.CardView
        android:id="@+id/branch_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        card_view:cardCornerRadius="@dimen/corner_round">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_margin">

            <TextView
                android:id="@+id/label_insurance_detail_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/prompt_mark"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/item_insurance_detail_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/label_insurance_detail_mark"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="TextView" />

            <TextView
                android:id="@+id/label_insurance_detail_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/item_insurance_detail_mark"
                android:text="@string/prompt_model" />

            <TextView
                android:id="@+id/item_insurance_detail_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/label_insurance_detail_model"
                android:text="TextView" />

            <TextView
                android:id="@+id/label_insurance_detail_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/prompt_vencimiento" />

            <TextView
                android:id="@+id/item_insurance_detail_expiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/label_insurance_detail_expiration"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="TextView" />

            <TextView
                android:id="@+id/label_insurance_detail_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/item_insurance_detail_expiration"
                android:text="@string/prompt_insurance_amount" />

            <TextView
                android:id="@+id/item_insurance_detail_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/label_insurance_detail_amount"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="TextView" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>